<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hurricane</string>
    <string name="main_activity_actionbar_title">Hurricane</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_about">About</string>
    <string name="REAL_GPS">Real GPS</string>
    <string name="action_account_manager">Account Manager</string>
    
    <string name="action_bar_share_with">Share with&#8230;</string>

    <string name="select_credential">Credential:</string>
    <string name="select_carrier">Carrier:</string>
    <string name="save">Save</string>
    <string name="restart_required">Application restart is required for changes to take effect.</string>
    <string name="cancel">Cancel</string>
    <string name="IDS_TO_OBTAIN_YOUR_CURRENT_POSITION">To obtain your current position, Hurricane requires \"Location Services\" setting to be turned on. Would you like to open the Location settings screen to turn setting on?</string>
    <string name="IDS_THERE_IS_NO_AVAILABLE_KNOWN_LOCATION">There is no available GPS location, app will exit.</string>
    
    <string name="IDS_ERROR">Error</string>
    <string name="IDS_INITIALIZATION_FAILED">Initialization failed!</string>
    <string name="IDS_ADD_INTEREST">Add Interest</string>

</resources>
