<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/action_bookmark"
        android:icon="@drawable/actionbar_notbookmarked"
        android:orderInCategory="2"
        android:showAsAction="always"/>
    <item
        android:id="@+id/menu_item_share_action_provider_action_bar"
        android:actionProviderClass="com.navbuilder.app.hurricane.share.CustomShareActionProvider"
        android:orderInCategory="3"
        android:showAsAction="always"
        android:title="@string/action_bar_share_with"/>
    <item
        android:id="@+id/action_account_manager"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_account_manager"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/action_about"/>

</menu>